--- a/LiberationSans/fontface.css
+++ b/LiberationSans/fontface.css
@@ -8,7 +8,7 @@
 @font-face {
     font-family: "Liberation Sans";
     font-weight: 400;
-    font-style: normal;
+    font-style: italic;
     src: url(LiberationSans-Italic.ttf);
 }
 
